--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Students Registration Form</title>
+        <link rel="stylesheet" href="style.css">
+        
     </head>
     <body>
         <header>
@@ -39,5 +41,6 @@
                 <tbody id="studentList"></tbody>
             </table>
         </section>
+        <script src="script.js"></script>
     </body>
     </html> 
